--- a/index.html
+++ b/index.html
@@ -28,7 +28,50 @@
     </header>
 
     <section id="banner">
-        
+        <div class="conteiner column">
+            <div class="banner-headline">
+                <h1>Top not experience</h1>
+                <h2>edicenter is a responsive templete perfact for all screen size</h2>
+            </div>
+            <div class="banner-options">
+                <div class="banner1">
+                    <div class="banner-title"> Emergency case </div>
+                    <div class="banner-description">Descrição do tema</div>
+                    <a href="">Read more</a>
+                </div>
+                <div class="banner2">
+                    <div class="banner-title"> Doctors Timetable </div>
+                    <div class="banner-description">Descrição do tema</div>
+                    <a href="">Read more</a>
+                </div>
+                <div class="banner3">
+                    <div class="banner-title"> Doctors Timetable </div>
+                   <div class="descriptions">
+                       <span>Monday-Friday</span>
+                       <span>8:00 - 17:00</span>
+                   </div>
+                   <div class="descriptions">
+                        <span>Saturday</span>
+                        <span>9:30 - 17:30</span>
+                   </div>
+                   <div class="descriptions">
+                        <span>Sunday</span>
+                        <span>9:30 - 15:00</span>
+                   </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="body">
+        <div class="conteiner">
+            <div class="body-left">
+
+            </div>
+            <div class="body-right">
+                
+            </div>
+        </div>
     </section>
 </body>
 </html>
