iniciando o corpo do site

--- a/index.html
+++ b/index.html
@@ -65,12 +65,39 @@
 
     <section id="body">
         <div class="conteiner">
-            <div class="body-left">
+            <section>
+                <div class="widget">
+                    <div class="widget_title">
+                        <div class="widget_title_text">Latest news</div>
+                        <div class="widget_title_bar"></div>
+                        <div class="widget_body">
+                            
+                        </div>
+                    </div>
+                </div>  
+            </section>
+            <aside>
+                <div class="widget">
+                    <div class="widget_title">
+                        <div class="widget_title_text">Departaments</div>
+                        <div class="widget_title_bar"></div>
 
-            </div>
-            <div class="body-right">
-                
-            </div>
+                        <div class="widget_body">
+
+                        </div>
+                    </div>
+                </div>   
+                <div class="widget">
+                    <div class="widget_title">
+                        <div class="widget_title_text">Make An Appointment</div>
+                        <div class="widget_title_bar"></div>
+
+                        <div class="widget_body">
+
+                        </div>
+                    </div>
+                </div>               
+            </aside>
         </div>
     </section>
 </body>
