iniciando versao responsiva

--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
         <title>Title</title>
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
+
+    <script>
+        window.onload = function() {
+            document.querySelector(".menu-mobile").addEventListener("click", function(){
+                if( document.querySelector(".menu nav ul").style.display == 'flex' ) {
+                    document.querySelector(".menu nav ul").style.display = "none";
+                } else {
+                    document.querySelector(".menu nav ul").style.display = "flex";
+                }
+            })
+        }
+    </script>
 <body>
     <header>
         <div class="conteiner">
@@ -12,6 +24,9 @@
                 <img src="assets/image/logo.png" alt="Lucyellen">
             </div>
             <div class="menu">
+                <div class="menu-mobile">
+                    <img src="assets/image/menu.png" alt="">
+                </div>
                 <nav>
                     <ul>
                         <li class="active"><a href="">Home</a></li>
@@ -72,81 +87,82 @@
                         <div class="widget_title_bar"></div>
                         
                         <div class="widget_body">
-                            <a href="">
-                                <article>
-                                    <div class="news_data">
-                                        <div class="news_posted_at">01 JAN 12</div>
-                                        <div class="news_coments">5</div>
-                                    </div>
-                                    <div class="news_thumbnail">
-                                        <img src="assets/image/dr.jpg" alt="">
-                                    </div>
-                                    <div class="news_title">
-                                        Title news
-                                    </div>
-                                    <div class="news_resume">
-                                        Kind beim arzt.JPEG
-                                        A pediatria (do grego παιδιατρική, composto de παιδός, "criança", e ἰατρός, "doutor", "aquele que cura")[1] é a especialidade médica dedicada à assistência à criança e ao adolescente, nos seus diversos aspectos, sejam eles preventivos ou curativos. Pessoas como crianças e adolescentes, se estiverem com doenças, devem dirigir-se ao seu pediatra.
-                                    </div>
-                                </article>
-                            </a>
+                                <a href="">
+                                    <article>
+                                        <div class="news_data">
+                                            <div class="news_posted_at">01 JAN 12</div>
+                                            <div class="news_coments">5</div>
+                                        </div>
+                                        <div class="news_thumbnail">
+                                            <img src="assets/image/dr.jpg" alt="">
+                                        </div>
+                                        <div class="news_title">
+                                            Title news
+                                        </div>
+                                        <div class="news_resume">
+                                            Kind beim arzt.JPEG
+                                            A pediatria (do grego παιδιατρική, composto de παιδός, "criança", e ἰατρός, "doutor", "aquele que cura")[1] é a especialidade médica dedicada à assistência à criança e ao adolescente, nos seus diversos aspectos, sejam eles preventivos ou curativos. Pessoas como crianças e adolescentes, se estiverem com doenças, devem dirigir-se ao seu pediatra.
+                                        </div>
+                                    </article>
+                                </a>
 
-                            <a href="">
-                                <article>
-                                    <div class="news_data">
-                                        <div class="news_posted_at">01 JAN 12</div>
-                                        <div class="news_coments">5</div>
-                                    </div>
-                                    <div class="news_thumbnail">
-                                        <img src="assets/image/dr.jpg" alt="">
-                                    </div>
-                                    <div class="news_title">
-                                        Title news
-                                    </div>
-                                    <div class="news_resume">
-                                        Kind beim arzt.JPEG
-                                        A pediatria (do grego παιδιατρική, composto de παιδός, "criança", e ἰατρός, "doutor", "aquele que cura")[1] é a especialidade médica dedicada à assistência à criança e ao adolescente, nos seus diversos aspectos, sejam eles preventivos ou curativos. Pessoas como crianças e adolescentes, se estiverem com doenças, devem dirigir-se ao seu pediatra.
-                                    </div>
-                                </article>
-                            </a>
+                                <a href="">
+                                    <article>
+                                        <div class="news_data">
+                                            <div class="news_posted_at">01 JAN 12</div>
+                                            <div class="news_coments">5</div>
+                                        </div>
+                                        <div class="news_thumbnail">
+                                            <img src="assets/image/dr.jpg" alt="">
+                                        </div>
+                                        <div class="news_title">
+                                            Title news
+                                        </div>
+                                        <div class="news_resume">
+                                            Kind beim arzt.JPEG
+                                            A pediatria (do grego παιδιατρική, composto de παιδός, "criança", e ἰατρός, "doutor", "aquele que cura")[1] é a especialidade médica dedicada à assistência à criança e ao adolescente, nos seus diversos aspectos, sejam eles preventivos ou curativos. Pessoas como crianças e adolescentes, se estiverem com doenças, devem dirigir-se ao seu pediatra.
+                                        </div>
+                                    </article>
+                                </a>
 
-                            <a href="">
-                                <article>
-                                    <div class="news_data">
-                                        <div class="news_posted_at">01 JAN 12</div>
-                                        <div class="news_coments">5</div>
-                                    </div>
-                                    <div class="news_thumbnail">
-                                        <img src="assets/image/dr.jpg" alt="">
-                                    </div>
-                                    <div class="news_title">
-                                        Title news
-                                    </div>
-                                    <div class="news_resume">
-                                        Kind beim arzt.JPEG
-                                        A pediatria (do grego παιδιατρική, composto de παιδός, "criança", e ἰατρός, "doutor", "aquele que cura")[1] é a especialidade médica dedicada à assistência à criança e ao adolescente, nos seus diversos aspectos, sejam eles preventivos ou curativos. Pessoas como crianças e adolescentes, se estiverem com doenças, devem dirigir-se ao seu pediatra.
-                                    </div>
-                                </article>
-                            </a>
+                                <a href="">
+                                    <article>
+                                        <div class="news_data">
+                                            <div class="news_posted_at">01 JAN 12</div>
+                                            <div class="news_coments">5</div>
+                                        </div>
+                                        <div class="news_thumbnail">
+                                            <img src="assets/image/dr.jpg" alt="">
+                                        </div>
+                                        <div class="news_title">
+                                            Title news
+                                        </div>
+                                        <div class="news_resume">
+                                            Kind beim arzt.JPEG
+                                            A pediatria (do grego παιδιατρική, composto de παιδός, "criança", e ἰατρός, "doutor", "aquele que cura")[1] é a especialidade médica dedicada à assistência à criança e ao adolescente, nos seus diversos aspectos, sejam eles preventivos ou curativos. Pessoas como crianças e adolescentes, se estiverem com doenças, devem dirigir-se ao seu pediatra.
+                                        </div>
+                                    </article>
+                                </a>
 
-                            <a href="">
-                                <article>
-                                    <div class="news_data">
-                                        <div class="news_posted_at">01 JAN 12</div>
-                                        <div class="news_coments">5</div>
-                                    </div>
-                                    <div class="news_thumbnail">
-                                        <img src="assets/image/dr.jpg" alt="">
-                                    </div>
-                                    <div class="news_title">
-                                        Title news
-                                    </div>
-                                    <div class="news_resume">
-                                        Kind beim arzt.JPEG
-                                        A pediatria (do grego παιδιατρική, composto de παιδός, "criança", e ἰατρός, "doutor", "aquele que cura")[1] é a especialidade médica dedicada à assistência à criança e ao adolescente, nos seus diversos aspectos, sejam eles preventivos ou curativos. Pessoas como crianças e adolescentes, se estiverem com doenças, devem dirigir-se ao seu pediatra.
-                                    </div>
-                                </article>
-                            </a>
+                                <a href="">
+                                    <article>
+                                        <div class="news_data">
+                                            <div class="news_posted_at">01 JAN 12</div>
+                                            <div class="news_coments">5</div>
+                                        </div>
+                                        <div class="news_thumbnail">
+                                            <img src="assets/image/dr.jpg" alt="">
+                                        </div>
+                                        <div class="news_title">
+                                            Title news
+                                        </div>
+                                        <div class="news_resume">
+                                            Kind beim arzt.JPEG
+                                            A pediatria (do grego παιδιατρική, composto de παιδός, "criança", e ἰατρός, "doutor", "aquele que cura")[1] é a especialidade médica dedicada à assistência à criança e ao adolescente, nos seus diversos aspectos, sejam eles preventivos ou curativos. Pessoas como crianças e adolescentes, se estiverem com doenças, devem dirigir-se ao seu pediatra.
+                                        </div>
+                                    </article>
+                                </a>
+
                         </div>
                     </div>
                 </div>  
@@ -158,7 +174,14 @@
                         <div class="widget_title_bar"></div>
 
                         <div class="widget_body">
-
+                            <div class="departaments">
+                                <div class="departaments-content"></div>
+                                <div class="departaments-content"></div>
+                                <div class="departaments-content"></div>
+                                <div class="departaments-content"></div>
+                                <div class="departaments-content"></div>
+                                <div class="departaments-content"></div>
+                            </div>
                         </div>
                     </div>
                 </div>   
@@ -168,7 +191,16 @@
                         <div class="widget_title_bar"></div>
 
                         <div class="widget_body">
+                            <div class="text-make-appointment">
+                                Texto de teste.
+                            </div>
 
+                            <div class="number">
+
+                            </div>
+                            <div class="email">
+
+                            </div>
                         </div>
                     </div>
                 </div>               
